--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.html",
-  "homepage": "https://pobedarostik.github.io/Travel",
+  "homepage": "https://pobedarostik.github.io/Travel/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /Travel/"
